--- a/app/frontend/gui/src/app/shared/side-nav/side-nav.component.html
+++ b/app/frontend/gui/src/app/shared/side-nav/side-nav.component.html
@@ -48,6 +48,39 @@
                 </mat-nav-list>
             </mat-expansion-panel>
             <mat-expansion-panel [class.mat-elevation-z0]="true">
+                <mat-expansion-panel-header>Ofertas</mat-expansion-panel-header>
+                <mat-nav-list>
+                    <a mat-list-item routerLink="/new-product">
+                        <mat-icon>create</mat-icon><span>Novo</span>
+                    </a>
+                    <a mat-list-item routerLink="/products">
+                        <mat-icon>table_chart</mat-icon><span>Consultar</span>
+                    </a>
+                </mat-nav-list>
+            </mat-expansion-panel>
+            <mat-expansion-panel [class.mat-elevation-z0]="true">
+                <mat-expansion-panel-header>Coberturas</mat-expansion-panel-header>
+                <mat-nav-list>
+                    <a mat-list-item routerLink="/new-product">
+                        <mat-icon>create</mat-icon><span>Novo</span>
+                    </a>
+                    <a mat-list-item routerLink="/products">
+                        <mat-icon>table_chart</mat-icon><span>Consultar</span>
+                    </a>
+                </mat-nav-list>
+            </mat-expansion-panel>
+            <mat-expansion-panel [class.mat-elevation-z0]="true">
+                <mat-expansion-panel-header>Assistências</mat-expansion-panel-header>
+                <mat-nav-list>
+                    <a mat-list-item routerLink="/new-product">
+                        <mat-icon>create</mat-icon><span>Novo</span>
+                    </a>
+                    <a mat-list-item routerLink="/products">
+                        <mat-icon>table_chart</mat-icon><span>Consultar</span>
+                    </a>
+                </mat-nav-list>
+            </mat-expansion-panel>
+            <mat-expansion-panel [class.mat-elevation-z0]="true">
                 <mat-expansion-panel-header>Simulações</mat-expansion-panel-header>
                 <mat-nav-list>
                     <a mat-list-item routerLink="#">
