--- a/app/frontend/src/app/shared/side-nav/side-nav.component.html
+++ b/app/frontend/src/app/shared/side-nav/side-nav.component.html
@@ -48,43 +48,13 @@
                 </mat-nav-list>
             </mat-expansion-panel>
             <mat-expansion-panel [class.mat-elevation-z0]="true">
-                <mat-expansion-panel-header>Ofertas</mat-expansion-panel-header>
+                <mat-expansion-panel-header>Cotações</mat-expansion-panel-header>
                 <mat-nav-list>
-                    <a mat-list-item routerLink="/new-product">
+                    <a mat-list-item routerLink="/new-insurance-quote">
                         <mat-icon>create</mat-icon><span>Novo</span>
                     </a>
-                    <a mat-list-item routerLink="/products">
+                    <a mat-list-item routerLink="/insurance_quotes">
                         <mat-icon>table_chart</mat-icon><span>Consultar</span>
-                    </a>
-                </mat-nav-list>
-            </mat-expansion-panel>
-            <mat-expansion-panel [class.mat-elevation-z0]="true">
-                <mat-expansion-panel-header>Coberturas</mat-expansion-panel-header>
-                <mat-nav-list>
-                    <a mat-list-item routerLink="/new-product">
-                        <mat-icon>create</mat-icon><span>Novo</span>
-                    </a>
-                    <a mat-list-item routerLink="/products">
-                        <mat-icon>table_chart</mat-icon><span>Consultar</span>
-                    </a>
-                </mat-nav-list>
-            </mat-expansion-panel>
-            <mat-expansion-panel [class.mat-elevation-z0]="true">
-                <mat-expansion-panel-header>Assistências</mat-expansion-panel-header>
-                <mat-nav-list>
-                    <a mat-list-item routerLink="/new-product">
-                        <mat-icon>create</mat-icon><span>Novo</span>
-                    </a>
-                    <a mat-list-item routerLink="/products">
-                        <mat-icon>table_chart</mat-icon><span>Consultar</span>
-                    </a>
-                </mat-nav-list>
-            </mat-expansion-panel>
-            <mat-expansion-panel [class.mat-elevation-z0]="true">
-                <mat-expansion-panel-header>Simulações</mat-expansion-panel-header>
-                <mat-nav-list>
-                    <a mat-list-item routerLink="#">
-                        <mat-icon>add_shopping_cart</mat-icon><span>Novo</span>
                     </a>
                 </mat-nav-list>
             </mat-expansion-panel>
