--- a/app/frontend/src/app/shared/side-nav/side-nav.component.html
+++ b/app/frontend/src/app/shared/side-nav/side-nav.component.html
@@ -34,7 +34,7 @@
     <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
         <mat-nav-list>
             <mat-list-item routerLink="#">
-                <mat-icon>dashboard</mat-icon><span>Dashboard</span>
+                <mat-icon>menu</mat-icon><span>Menu</span>
             </mat-list-item>
             <mat-expansion-panel [class.mat-elevation-z0]="true">
                 <mat-expansion-panel-header>Produtos</mat-expansion-panel-header>
