--- a/app/frontend/src/app/products/component/add-product/add-product.component.css
+++ b/app/frontend/src/app/products/component/add-product/add-product.component.css
@@ -1,13 +1,25 @@
-mat-card-header{
-  background: #ff0000;
-  padding: 5px;
-  color:white;
+.container mat-form-field + mat-form-field {
+  margin-left: 8px;
+  margin-right: 8px;
 }
 
-mat-card-content{
-  padding: 10px;
+.container mat-form-field {
+  width: 220px;
 }
 
-mat-card{
-  padding:0;
+.container form {
+  margin-bottom: 20px;
+}
+
+.container form > * {
+  margin: 12px 0;
+}
+
+.container .mat-radio-button {
+  margin: 0 12px;
+}
+
+.container-form-fields {
+  display: flex;
+  align-items: flex-start;
 }
