--- a/app/frontend/src/app/products/component/add-product/add-product.component.html
+++ b/app/frontend/src/app/products/component/add-product/add-product.component.html
@@ -1,82 +1,86 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Novo Produto</mat-card-title>
-  </mat-card-header>
+<div class="container">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Novo Produto</mat-card-title>
+    </mat-card-header>
 
-  <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
-    <mat-card-content>
-      <mat-form-field appearance="outline" class="form-element">
-        <mat-label>Nome</mat-label>
-        <input matInput formControlName="name">
-        <mat-hint align="start">{{form.controls['name'].value?.length || 0}}/256</mat-hint>
-      </mat-form-field>
-      <mat-form-field appearance="outline" class="form-element">
-        <mat-label>Categoria</mat-label>
-        <mat-select formControlName="category">
-          <mat-option *ngFor="let category of categories" [value]="category">{{ category }}</mat-option>
-        </mat-select>
-      </mat-form-field>
-    </mat-card-content>
+      <mat-card>
+        <mat-card-content class="mat-form-field-wrapper">
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>Nome</mat-label>
+            <input matInput formControlName="name" class="form-element flex-fill" required>
+            <mat-hint align="start">{{form.controls['name'].value?.length || 0}}/256</mat-hint>
+          </mat-form-field>
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>Categoria</mat-label>
+            <mat-select formControlName="category">
+              <mat-option *ngFor="let category of categories" [value]="category">{{ category }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </mat-card-content>
+      </mat-card>
 
-    <mat-card-content>
-      <mat-form-field appearance="outline" class="form-element">
-        <mat-label>Máximo Preço Mensal Sugerido</mat-label>
-        <input type="number" matInput formControlName="max_total_monthly_premium_amount" />
-      </mat-form-field>
-      <mat-form-field appearance="outline" class="form-element">
-        <mat-label>Mínimo Preço Mensal Sugerido</mat-label>
-        <input type="number" matInput formControlName="min_total_monthly_premium_amount" />
-      </mat-form-field>
-      <mat-form-field appearance="outline" class="form-element">
-        <mat-label>Preço Mensal Sugerido</mat-label>
-        <input type="number" matInput formControlName="suggested_total_monthly_premium_amount" />
-      </mat-form-field>
-    </mat-card-content>
-
-    
-    <mat-card>
+      <mat-card>
       <mat-card-content>
-        <div class="form-column" formArrayName="coverages">
-          <div *ngFor="let coverage of coverages.controls; let i = index" [formGroupName]="i">
-            <mat-form-field appearance="outline" class="form-element">
-              <input matInput formControlName="key" placeholder="Cobertura">
-            </mat-form-field>
-            <mat-form-field appearance="outline" class="form-element">
-              <input matInput formControlName="value" placeholder="Valor">
-            </mat-form-field>
-            <button mat-mini-fab (click)="addCoverage()" color="primary">
-              <mat-icon class="add-course-btn">add</mat-icon>
-            </button>
-            <button mat-icon-button (click)="removeCoverage(i)" color="primary">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </div>
-        </div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Máximo Preço Mensal Sugerido</mat-label>
+          <input type="number" matInput formControlName="max_total_monthly_premium_amount" required />
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Mínimo Preço Mensal Sugerido</mat-label>
+          <input type="number" matInput formControlName="min_total_monthly_premium_amount" required />
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Preço Mensal Sugerido</mat-label>
+          <input type="number" matInput formControlName="suggested_total_monthly_premium_amount" required />
+        </mat-form-field>
       </mat-card-content>
     </mat-card>
 
-
-    <mat-card>
-      <mat-card-content>
-        <div class="form-column" formArrayName="assistances">
-          <div *ngFor="let assistance of assistances.controls; let i = index" [formGroupName]="i">
-            <mat-form-field appearance="outline" class="form-element">
-              <input matInput formControlName="assistance" placeholder="Assistência">
-            </mat-form-field>
-            <button mat-mini-fab (click)="addAssistance()" color="primary">
-              <mat-icon class="add-course-btn">add</mat-icon>
-            </button>
-            <button mat-icon-button (click)="removeAssistance(i)" color="primary">
-              <mat-icon>delete</mat-icon>
-            </button>
+      <mat-card>
+        <mat-card-content>
+          <div class="form-column" formArrayName="coverages">
+            <div *ngFor="let coverage of coverages.controls; let i = index" [formGroupName]="i">
+              <mat-form-field appearance="outline" class="form-element">
+                <input matInput formControlName="key" placeholder="Cobertura" required>
+              </mat-form-field>
+              <mat-form-field appearance="outline" class="form-element">
+                <input type="number" matInput formControlName="value" placeholder="Valor" required>
+              </mat-form-field>
+              <button mat-mini-fab (click)="addCoverage()" color="primary">
+                <mat-icon class="add-course-btn">add</mat-icon>
+              </button>
+              <button mat-icon-button (click)="removeCoverage(i)" color="primary">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </div>
           </div>
-        </div>
-      </mat-card-content>
-    </mat-card> 
-    
-    <div class="btn-create">
-      <button mat-raised-button color="primary" type="submit">Criar</button>
-    </div>
-  </form>
-</mat-card>
+        </mat-card-content>
+      </mat-card>
+
+      <mat-card>
+        <mat-card-content>
+          <div class="form-column" formArrayName="assistances">
+            <div *ngFor="let assistance of assistances.controls; let i = index" [formGroupName]="i">
+              <mat-form-field appearance="outline" class="form-element">
+                <input matInput formControlName="assistance" placeholder="Assistência" required>
+              </mat-form-field>
+              <button mat-mini-fab (click)="addAssistance()" color="primary">
+                <mat-icon class="add-course-btn">add</mat-icon>
+              </button>
+              <button mat-icon-button (click)="removeAssistance(i)" color="primary">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+
+      <div class="btn-create">
+        <button mat-raised-button color="primary" type="submit">Criar</button>
+      </div>
+    </form>
+  </mat-card>
+</div>
