--- a/app/frontend/src/app/shared/dialog/error-dialog/component/error-dialog.component.scss
+++ b/app/frontend/src/app/shared/dialog/error-dialog/component/error-dialog.component.scss
@@ -1,5 +1,5 @@
 .error-message {
-    background: #eee;
+    background: #ff0000;
     padding: 1rem;
     font-family: monospace;
     word-break: break-all;
