--- a/app/frontend/src/app/shared/dialog/loading-dialog/component/loading-dialog.component.html
+++ b/app/frontend/src/app/shared/dialog/loading-dialog/component/loading-dialog.component.html
@@ -1,5 +1,5 @@
-<h1 mat-dialog-title>Loading data</h1>
-<div mat-dialog-content>Please have a moment of patience</div>
+<h1 mat-dialog-title>Carregando</h1>
+<div mat-dialog-content>Por favor aguarde</div>
 <div mat-dialog-actions>
   <div class="loading-spinner">
     <mat-spinner diameter="40" strokeWidth="2"></mat-spinner>
