--- a/app/frontend/src/app/products/component/product-detail/product-detail.component.css
+++ b/app/frontend/src/app/products/component/product-detail/product-detail.component.css
@@ -1,7 +1,25 @@
-.form-element{
-  width: 500px;
+.container mat-form-field + mat-form-field {
+  margin-left: 8px;
+  margin-right: 8px;
 }
-  
-.product-detail-container{
-  padding: 20px;
+
+.container mat-form-field {
+  width: 220px;
+}
+
+.container form {
+  margin-bottom: 20px;
+}
+
+.container form > * {
+  margin: 12px 0;
+}
+
+.container .mat-radio-button {
+  margin: 0 12px;
+}
+
+.container-form-fields {
+  display: flex;
+  align-items: flex-start;
 }
