--- a/app/frontend/src/app/products/component/add-product/add-product.component.html
+++ b/app/frontend/src/app/products/component/add-product/add-product.component.html
@@ -1,7 +1,9 @@
 <div class="container">
   <mat-card>
     <mat-card-header>
-      <mat-card-title>Novo Produto</mat-card-title>
+      <mat-card-title>
+        <h3>Novo Produto</h3>
+      </mat-card-title>
     </mat-card-header>
 
     <form [formGroup]="form" (ngSubmit)="onSubmit()" novalidate>
@@ -46,7 +48,7 @@
               <div [formGroupName]="i">
                 <mat-form-field appearance="outline" class="form-element">
                   <input matInput formControlName="key" placeholder="Cobertura" required>
-                  <!-- <mat-hint align="start">{{form.controls['key'].value?.length || 0}}/256</mat-hint> -->
+                  <mat-hint align="start">{{coverages.controls[i].get('key')?.value?.length || 0}}/256</mat-hint>
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="form-element">
                   <input currencyMask matInput formControlName="value" placeholder="Valor" required>
@@ -70,7 +72,7 @@
               <div [formGroupName]="i">
                 <mat-form-field appearance="outline" class="form-element">
                   <input matInput formControlName="assistance" placeholder="Assistência" required>
-                 <!-- <mat-hint align="start">{{form.controls['assistance'].value?.length || 0}}/256</mat-hint> -->
+                  <mat-hint align="start">{{assistances.controls[i].get('assistance')?.value?.length || 0}}/256</mat-hint>
                 </mat-form-field>
                 <button mat-mini-fab (click)="addAssistance()" color="primary" type="button">
                   <mat-icon class="add-course-btn">add</mat-icon>
