--- a/app/frontend/src/app/products/component/product-detail/product-detail.component.css
+++ b/app/frontend/src/app/products/component/product-detail/product-detail.component.css
@@ -1,3 +1,7 @@
+.container {
+  overflow-y: auto;
+}
+
 .container mat-form-field + mat-form-field {
   margin-left: 8px;
   margin-right: 8px;
@@ -22,4 +26,16 @@
 .container-form-fields {
   display: flex;
   align-items: flex-start;
+}
+
+.centered-buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
 }
