Add QQuote Simulation Form

--- a/app/frontend/src/app/products/component/create-product/create-product.component.html
+++ b/app/frontend/src/app/products/component/create-product/create-product.component.html
@@ -86,7 +86,7 @@
         </mat-card-content>
       </mat-card>
 
-      <div class="btn-create">
+      <div class="centered-buttons">
         <button mat-raised-button color="primary" type="submit">Criar</button>
       </div>
     </form>
