--- a/app/frontend/src/app/insurance_quotes/component/insurance-quote-detail/insurance-quote-detail.component.html
+++ b/app/frontend/src/app/insurance_quotes/component/insurance-quote-detail/insurance-quote-detail.component.html
@@ -13,7 +13,7 @@
             <mat-form-field appearance="outline" class="form-element">
               <mat-label>Produto</mat-label>
               <mat-select formControlName="product">
-                <mat-option *ngFor="let product of products" [value]="product">{{ product.id }} - {{ product.name }}</mat-option>
+                <mat-option *ngFor="let product of products" [value]="product.id">{{ product.id }} - {{ product.name }}</mat-option>
               </mat-select>
             </mat-form-field>
           </mat-card-content>
