--- a/app/frontend/src/app/shared/side-nav/side-nav.component.html
+++ b/app/frontend/src/app/shared/side-nav/side-nav.component.html
@@ -39,7 +39,7 @@
             <mat-expansion-panel [class.mat-elevation-z0]="true">
                 <mat-expansion-panel-header>Produtos</mat-expansion-panel-header>
                 <mat-nav-list>
-                    <a mat-list-item routerLink="/new-product">
+                    <a mat-list-item routerLink="/create-product">
                         <mat-icon>create</mat-icon><span>Novo</span>
                     </a>
                     <a mat-list-item routerLink="/products">
@@ -50,10 +50,10 @@
             <mat-expansion-panel [class.mat-elevation-z0]="true">
                 <mat-expansion-panel-header>Cotações</mat-expansion-panel-header>
                 <mat-nav-list>
-                    <a mat-list-item routerLink="/new-insurance-quote">
+                    <a mat-list-item routerLink="/create-insurance-quote-simulation">
                         <mat-icon>create</mat-icon><span>Novo</span>
                     </a>
-                    <a mat-list-item routerLink="/insurance_quotes">
+                    <a mat-list-item routerLink="/insurance-quote-simulations">
                         <mat-icon>table_chart</mat-icon><span>Consultar</span>
                     </a>
                 </mat-nav-list>
