--- a/app/frontend/src/app/insurance_quotes/component/insurance-quote-detail/insurance-quote-detail.component.html
+++ b/app/frontend/src/app/insurance_quotes/component/insurance-quote-detail/insurance-quote-detail.component.html
@@ -12,7 +12,7 @@
         <mat-card-content class="mat-form-field-wrapper">
           <mat-form-field appearance="outline" class="form-element">
             <mat-label>ID</mat-label>
-            <input matInput formControlName="document_number" class="form-element flex-fill"
+            <input matInput formControlName="id" class="form-element flex-fill"
               [ngModel]="insuranceQuote?.id" required>
           </mat-form-field>
 
