--- a/app/frontend/src/app/products/component/create-product/create-product.component.html
+++ b/app/frontend/src/app/products/component/create-product/create-product.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <mat-card>
+  <mat-card class="primary-header">
     <mat-card-header>
       <mat-card-title>
         <h3>Novo Produto</h3>
