--- a/app/frontend/src/app/products/component/create-product/create-product.component.css
+++ b/app/frontend/src/app/products/component/create-product/create-product.component.css
@@ -1,7 +1,3 @@
-.container {
-  overflow-y: auto;
-}
-
 .container mat-form-field + mat-form-field {
   margin-left: 8px;
   margin-right: 8px;
@@ -39,3 +35,12 @@
   align-items: center;
   margin-top: 20px;
 }
+
+div {
+  display: block;
+}
+
+.primary-header {
+  padding-left: 20px;
+}
+
